--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Build project
         run: npm run build
         env:
-          VITE_API_URL: https://tu-api-en-produccion.com/api
+          VITE_API_URL: https:// gonanx.pythonanywhere.com/api
 
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@v4
