--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-VITE_API_URL=https://127.0.0.1:5000/api
+#VITE_API_URL=https://127.0.0.1:5000/api
+VITE_API_URL=https://gonanx.pythonanywhere.com/api
